<resources>
    <string name="app_name">RecipeMe</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_food_selection">Food selection</string>
    <string name="title_recipe_details">Recipe details</string>
    <string name="title_favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">Splash</string>
</resources>